--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   
   # Network & API
   dio: ^5.7.0
+  http: ^1.2.0
   json_annotation: ^4.9.0
   pretty_dio_logger: ^1.4.0
   connectivity_plus: ^6.0.5
@@ -40,6 +41,11 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   jwt_decoder: ^2.0.1
   crypto: ^3.0.5
+  
+  # Google Drive Sync
+  google_sign_in: ^6.2.1
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
   
   # SMS (Android)
   telephony: ^0.2.0
