--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -73,35 +73,31 @@ IDI_APP_ICON            ICON                    "resources\\app_icon.ico"
 #endif
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION VERSION_AS_NUMBER
- PRODUCTVERSION VERSION_AS_NUMBER
- FILEFLAGSMASK VS_FFI_FILEFLAGSMASK
-#ifdef _DEBUG
- FILEFLAGS VS_FF_DEBUG
-#else
+ FILEVERSION 1,0,0,0
+ PRODUCTVERSION 1,0,0,0
+ FILEFLAGSMASK 0x3fL
  FILEFLAGS 0x0L
-#endif
- FILEOS VOS__WINDOWS32
- FILETYPE VFT_APP
+ FILEOS 0x4L
+ FILETYPE 0x1L
  FILESUBTYPE 0x0L
 BEGIN
     BLOCK "StringFileInfo"
     BEGIN
-        BLOCK "040904e4"
+        BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName", "com.pritechvior" "\0"
-            VALUE "FileDescription", "viornet" "\0"
+            VALUE "FileDescription", "Viornet" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "viornet" "\0"
+            VALUE "InternalName", "Viornet" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2026 com.pritechvior. All rights reserved." "\0"
-            VALUE "OriginalFilename", "viornet.exe" "\0"
-            VALUE "ProductName", "viornet" "\0"
+            VALUE "OriginalFilename", "Viornet.exe" "\0"
+            VALUE "ProductName", "Viornet" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
     BLOCK "VarFileInfo"
     BEGIN
-        VALUE "Translation", 0x409, 1252
+        VALUE "Translation", 0x0409, 1200
     END
 END
 
