--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   
   # SMS (Android)
-  telephony: ^0.2.0
+  shared_preferences: ^2.3.2
   permission_handler: ^11.3.1
   
   # Utilities
